# nix-cde

./: LICENSE  README.md  flake.nix  main.nix  nix-cde.nix  overlay.nix
builders/: bundle.nix  docker-nix2container.nix  docker.nix
contrib/gitlab-runner/: nix-builder-vpc.yaml  nix-builder.yaml  nix-caching.yaml
deployments/: build-docker.nix  deploy-serverless.nix
languages/: go-gomod2nix.nix  python-poetry.nix  rust-naersk.nix
template/: flake.nix  project.nix
tools/: cmd-aws-assume.nix  mod-lean-python.nix  pkg-terraform.nix
tools/aws_assume/: assume.py  flake.nix  project.nix  pyproject.toml
