[tool.poetry]
name = "assume"
version = "1.0.0"
description = "Assume role"
authors = ["Derek Kulinski <d@kulinski.us>"]
license = "proprietary"
packages = [
    { include = "assume.py" }
]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.17.17"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
tan = "^22.2.0"
boto3-stubs = {extras = ["sts"], version = "^1.21.21"}

[tool.poetry.scripts]
assume = "assume:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
